--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,43 @@
 body {
-    background:  rgb(134, 206, 194);
-    color: rgb(88, 53, 21);
+    background:  rgb(218, 235, 144);
+    color: rgb(37, 37, 34);
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 100%;
+    padding: 10em;
 }
+
+h1{
+    font-size: 2em;
+    padding: 8px;
+}
+
+h2{
+    font-size: 1.5em;
+    padding: 8px;
+}
+
 p {
-    margin: 0;
-    text-indent: 3ch;
+    margin: 10;
+    text-align: justify;
+    font-size: 1em;
 }
+
 ul {
-    list-style-type: circle;
-    list-style-position: inherit;
+    list-style: circle;
+    list-style-position: inside;
+    font-size: 1em;
+}
+
+table {
+    text-align: justify;
+    border: 1px solid black;
+}
+
+td {
+    width: 25%;
+}
+
+img {
+    width: 25%;
+    height: auto;
 }
