--- a/css/style.css
+++ b/css/style.css
@@ -8,17 +8,18 @@ body {
 
 h1{
     font-size: 2em;
-    padding: 8px;
 }
 
 h2{
     font-size: 1.5em;
-    padding: 8px;
+    padding-top: .75em;
+    padding-bottom: .25em;
+    text-indent: 3ch
 }
 
 p {
     margin: 10;
-    text-align: justify;
+    text-align: left;
     font-size: 1em;
 }
 
@@ -26,18 +27,30 @@ ul {
     list-style: circle;
     list-style-position: inside;
     font-size: 1em;
+    line-height: 1.5em;
+    box-align: left;
+    padding-left: 2em;
 }
 
 table {
     text-align: justify;
-    border: 1px solid black;
 }
 
 td {
-    width: 25%;
+    width: 20%;
 }
 
 img {
-    width: 25%;
+    width: 35%;
     height: auto;
+    padding-left: 2em;
+}
+
+.important {
+    font-weight: bold;
+}
+
+button {
+    padding: 1em;
+    background-color: rgb(201, 137, 0);
 }
