--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,14 @@ ul {
     padding-left: 2em;
 }
 
+ol {
+    list-style-type: decimal;
+    font-size: 1em;
+    line-height: 1.5em;
+    box-align: left;
+    padding-left: 2em;
+}
+
 table {
     text-align: justify;
 }
